[tool.poetry]
name = "segmed"
version = "0.6.12"
description = "Applying Deep Learning to medical image segmentation tasks"
authors = ["Edwin Bedolla <developeredwin@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/DCI-NET/segmed"
repository = "https://github.com/DCI-NET/segmed"
include = ["LICENSE"]

[tool.poetry.dependencies]
python = "^3.7"
scikit-learn = "^0.21.3"
scikit-image = "^0.16.2"
tensorflow = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.740.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
